--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 	<title>Hidden Love Flowers & Crafts + Cafe</title>
 	<body>
 		<main>
-			<nav>
+			<nav class="desktop-nav">
 				<div class="top-nav">
 					<div class="container-xl">can customize your order to fit your needs & preference</div>
 				</div>
 				<div class="main-nav">
 					<div class="container-xl">
 						<div class="row align-items-center">
-							<div class="col d-flex justify-content-end">
+							<div class="col d-flex justify-content-end align-items-center">
 								<a href="#" class="nav-link active">Home</a>
 								<a href="#" class="nav-link">Gallery</a>
 								<a href="#" class="nav-link">About Our Shop</a>
 							</div>
-							<div class="col d-flex justify-content-center">
+							<div class="col d-flex justify-content-center align-items-center">
 								<img src="images/icons/logo-nav.png" class="nav-logo">
 							</div>
-							<div class="col d-flex justify-content-start">
+							<div class="col d-flex justify-content-start align-items-center">
 								<a href="#" class="nav-link">Contact Us</a>
 								<a href="#" class="nav-link">Sign In</a>
 								<a href="#" class="nav-link">Sign Up</a>
@@ -52,22 +52,22 @@
 						</div>
 					</div>
 				</div>
-
-				<section class="header-block">
-					<div class="container-xl">
-						<div class="row align-items-center">
-							<div class="col">
-								<h1 class="header-title">The Best Flowers and Crafts For All Occasions</h1>
-								<p class="my-3 body-text">We can customize your order to fit your needs and preference + Café</p>
-								<a href="#" class="orange-btn">Inquire now</a>
-							</div>
-							<div class="col">
-								<img src="images/header-image.png" class="header-image">
-							</div>
+			</nav>
+			
+			<section class="header-block">
+				<div class="container-xl">
+					<div class="row align-items-center">
+						<div class="col">
+							<h1 class="header-title">The Best Flowers and Crafts For All Occasions</h1>
+							<p class="my-3 body-text">We can customize your order to fit your needs and preference + Café</p>
+							<a href="#" class="orange-btn">Inquire now</a>
+						</div>
+						<div class="col">
+							<img src="images/header-image.png" class="header-image">
 						</div>
 					</div>
-				</section>
-			</nav>
+				</div>
+			</section>
 		</main>
 	</body>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
