--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta content="https://raw.githubusercontent.com/miniwebpage/isayskitchen/main/images/sharingbanner.png" property="twitter:image"/>
 	<meta content="https://raw.githubusercontent.com/miniwebpage/isayskitchen/main/images/sharingbanner.png" property="og:image"/>
 	<link rel='shortcut icon' type='image/x-icon' href='images/icons/favicon.svg' />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Princess+Sofia&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon+SC&family=Princess+Sofia&family=Quattrocento:wght@400;700&display=swap');
+	</style>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/general.css">
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -53,18 +53,105 @@
 					</div>
 				</div>
 			</nav>
-			
+			<nav class="mobile-nav">
+				<div class="top-nav">
+					<div class="container-md">can customize your order to fit your needs & preference</div>
+				</div>
+				<div class="main-nav">
+					<div class="container-md d-flex justify-content-between align-items-center">
+						<img src="images/icons/LOGO-WHITE-OUTLINE.svg" class="nav-logo">
+						<div id="menu-button">
+							<img src="images/icons/hamburger.svg" class="nav-hamburger">
+							<img src="images/icons/close.svg" class="nav-close">
+						</div>
+						<div  id="mobile-nav-content">
+							<div class="container-md">
+								<ul class="no-bullets">
+									<li><a href="#" class="nav-link active">Home</a></li>
+									<li><a href="#" class="nav-link">Gallery</a></li>
+									<li><a href="#" class="nav-link">About Our Shop</a></li>
+									<li><a href="#" class="nav-link">Contact Us</a></li>
+									<li><a href="#" class="nav-link">Sign In</a></li>
+									<li><a href="#" class="nav-link">Sign Up</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</nav>
 			<section class="header-block">
 				<div class="container-xl">
 					<div class="row align-items-center">
-						<div class="col">
+						<div class="col-lg-6 col-md-6 col-12">
 							<h1 class="header-title">The Best Flowers and Crafts For All Occasions</h1>
 							<p class="my-3 body-text">We can customize your order to fit your needs and preference + Café</p>
 							<a href="#" class="orange-btn">Inquire now</a>
 						</div>
-						<div class="col">
+						<div class="col-lg-6 col-md-6 col-12">
 							<img src="images/header-image.png" class="header-image">
 						</div>
+					</div>
+				</div>
+			</section>
+			<section class="second-block">
+				<img src="images/icons/element-4.svg" class="scndBlock-topELement">
+				<div class="container-xl">
+					<h2 class="block-title">Our Bestsellers</h2>
+					<div class="grid">
+						<a href="#" class="item-card">
+							<img src="images/cards/image-1.png" class="card-image">
+							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 1,100.00</p>
+						</a>
+						<a href="#"class="item-card">
+							<img src="images/cards/image-2.png" class="card-image">
+							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 850.00</p>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-3.png" class="card-image">
+							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 600.00</p>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-4.png" class="card-image">
+							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
+							<p class="body-text-sm">with wrap</p>
+							<p class="price">php 115.00</p>
+						</a>
+					</div>
+				</div>
+			</section>
+			<section class="third-block">
+				<div class="container-xl">
+					<div class="grid">
+						<a href="#" class="item-card">
+							<img src="images/cards/image-1.png" class="card-image">
+							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 1,100.00</p>
+						</a>
+						<a href="#"class="item-card">
+							<img src="images/cards/image-2.png" class="card-image">
+							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 850.00</p>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-3.png" class="card-image">
+							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 600.00</p>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-4.png" class="card-image">
+							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
+							<p class="body-text-sm">with wrap</p>
+							<p class="price">php 115.00</p>
+						</a>
 					</div>
 				</div>
 			</section>
@@ -76,4 +163,35 @@
 	<script src="js/navigation.js"></script>
 	<script src="js/slider.js"></script>
 	<script src="js/fadeViewpoint.js"></script> -->
+	<script>
+		document.addEventListener('DOMContentLoaded', () => {
+			const menuButton = document.getElementById('menu-button');
+			const mobileNav = document.getElementById('mobile-nav-content');
+			const navHamburger = document.querySelector('.nav-hamburger');
+			const navClose = document.querySelector('.nav-close');
+			let isMobileNavOpen = false; // Keep track of the mobile navigation state
+
+			menuButton.addEventListener('click', () => {
+				if (isMobileNavOpen) {
+					// If the mobile navigation is open, close it
+					mobileNav.classList.add('hide');
+					setTimeout(() => {
+						mobileNav.classList.remove('show');
+						mobileNav.style.display = 'none'; // Hide the mobile nav after the slide-up animation
+						mobileNav.classList.remove('hide');
+					}, 300); // Delay the display:none until after the slide-up animation
+					navHamburger.style.opacity = 1;
+					navClose.style.opacity = 0;
+				} else {
+					// If the mobile navigation is closed, open it
+					mobileNav.style.display = 'block'; // Show the mobile nav before sliding down
+					mobileNav.classList.add('show');
+					navHamburger.style.opacity = 0;
+					navClose.style.opacity = 1;
+				}
+				isMobileNavOpen = !isMobileNavOpen; // Toggle the state
+			});
+		});
+
+	</script>
 </html>
