--- a/index.html
+++ b/index.html
@@ -126,34 +126,125 @@
 				</div>
 			</section>
 			<section class="third-block">
+				<img src="images/icons/element-4.svg" class="thirdBlock-topRightELement">
+				<img src="images/icons/element-7.svg" class="thirdBlock-topCenterELement">
 				<div class="container-xl">
-					<div class="grid">
+					<div class="filterContainer">
+						<div class="custom-select-container">
+							<p>Colors</p>
+							<div class="custom-select light-color-select">
+								<div class="selected-option">All</div>
+								<div class="options">
+								  <div class="option" data-value="all">All</div>
+								  <div class="option" data-value="blue">Blue</div>
+								  <div class="option" data-value="pink">Pink</div>
+								  <div class="option" data-value="green">green</div>
+								  <div class="option" data-value="purple">purple</div>
+								  <div class="option" data-value="red">red</div>
+								  <div class="option" data-value="white">White</div>
+								</div>
+							  </div>
+						</div>
+						<div class="custom-select-container">
+							<p>Flower Type</p>
+							<div class="custom-select dried-flower-select">
+								<div class="selected-option">All</div>
+								<div class="options">
+								  <div class="option" data-value="all">All</div>
+								  <div class="option" data-value="yes">With Dried Flowers</div>
+								  <div class="option" data-value="no">Without Dried Flowers</div>
+								</div>
+							</div>
+						</div>
+						<div class="custom-select-container">
+							<p>Price Range</p>
+							<div class="custom-select price-range-select">
+								<div class="selected-option">All</div>
+								<div class="options">
+								  <div class="option" data-value="all">All</div>
+								  <div class="option" data-value="1">Below P500.00</div>
+								  <div class="option" data-value="2">Below P1,000.00</div>
+								  <div class="option" data-value="3">Below P1,500.00</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="grid item-container">
 						<a href="#" class="item-card">
 							<img src="images/cards/image-1.png" class="card-image">
 							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 1,100.00</p>
+							<div class="light-color" style="display: none;">blue</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
 						</a>
 						<a href="#"class="item-card">
 							<img src="images/cards/image-2.png" class="card-image">
 							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 850.00</p>
+							<div class="light-color" style="display: none;">pink</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
 						</a>
 						<a href="#" class="item-card">
 							<img src="images/cards/image-3.png" class="card-image">
 							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
 							<p class="body-text-sm">with premium wrap and accents</p>
 							<p class="price">php 600.00</p>
+							<div class="light-color" style="display: none;">white</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
 						</a>
 						<a href="#" class="item-card">
 							<img src="images/cards/image-4.png" class="card-image">
 							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
 							<p class="body-text-sm">with wrap</p>
 							<p class="price">php 115.00</p>
+							<div class="light-color" style="display: none;">blue</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-7.png" class="card-image">
+							<h3 class="card-title">Single small dried long stem flower with wrapr</h3>
+							<p class="body-text-sm">with wrap</p>
+							<p class="price">php 100.00</p>
+							<div class="light-color" style="display: none;">purple</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
+						</a>
+						<a href="#"class="item-card">
+							<img src="images/cards/image-8.png" class="card-image">
+							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 1,100.00</p>
+							<div class="light-color" style="display: none;">red</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-9.png" class="card-image">
+							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 850.00</p>
+							<div class="light-color" style="display: none;">pink</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-10.png" class="card-image">
+							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
+							<p class="body-text-sm">with premium wrap and accents</p>
+							<p class="price">php 600.00</p>
+							<div class="light-color" style="display: none;">pink</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
+						</a>
+						<a href="#" class="item-card">
+							<img src="images/cards/image-11.png" class="card-image">
+							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
+							<p class="body-text-sm">with wrap</p>
+							<p class="price">php 115.00</p>
+							<div class="light-color" style="display: none;">green</div>
+      						<div class="has-dried-flowers" style="display: none;">true</div>
 						</a>
 					</div>
 				</div>
+				
 			</section>
 		</main>
 	</body>
@@ -169,29 +260,87 @@
 			const mobileNav = document.getElementById('mobile-nav-content');
 			const navHamburger = document.querySelector('.nav-hamburger');
 			const navClose = document.querySelector('.nav-close');
-			let isMobileNavOpen = false; // Keep track of the mobile navigation state
+			let isMobileNavOpen = false;
 
 			menuButton.addEventListener('click', () => {
 				if (isMobileNavOpen) {
-					// If the mobile navigation is open, close it
 					mobileNav.classList.add('hide');
 					setTimeout(() => {
 						mobileNav.classList.remove('show');
-						mobileNav.style.display = 'none'; // Hide the mobile nav after the slide-up animation
+						mobileNav.style.display = 'none';
 						mobileNav.classList.remove('hide');
-					}, 300); // Delay the display:none until after the slide-up animation
+					}, 300);
 					navHamburger.style.opacity = 1;
 					navClose.style.opacity = 0;
 				} else {
-					// If the mobile navigation is closed, open it
-					mobileNav.style.display = 'block'; // Show the mobile nav before sliding down
+					mobileNav.style.display = 'block';
 					mobileNav.classList.add('show');
 					navHamburger.style.opacity = 0;
 					navClose.style.opacity = 1;
 				}
-				isMobileNavOpen = !isMobileNavOpen; // Toggle the state
+				isMobileNavOpen = !isMobileNavOpen;
 			});
 		});
+
+		window.addEventListener("scroll", function () {
+			const image = document.querySelector(".nav-logo");
+			const scrollPosition = window.scrollY || window.pageYOffset;
+			const defaultHeight = 100;
+			const reducedHeight = 75;
+			const newHeight = Math.max(defaultHeight - scrollPosition, reducedHeight);
+
+			image.style.transition = "max-height 0.3s ease";
+			image.style.maxHeight = newHeight + "px";
+
+			if (scrollPosition === 0) {
+				image.style.transition = "none";
+				image.style.maxHeight = defaultHeight + "px";
+				image.style.transition = "max-height 0.3s ease";
+			}
+		});
+
+		const customSelects = document.querySelectorAll('.custom-select');
+		const itemContainer = document.querySelector('.item-container');
+
+		customSelects.forEach(customSelect => {
+		const selectedOption = customSelect.querySelector('.selected-option');
+		const optionsContainer = customSelect.querySelector('.options');
+
+		selectedOption.addEventListener('click', () => {
+			customSelects.forEach(cs => cs !== customSelect && cs.querySelector('.options').classList.remove('show'));
+			optionsContainer.classList.toggle('show');
+		});
+
+		optionsContainer.querySelectorAll('.option').forEach(option => {
+			option.addEventListener('click', () => {
+			selectedOption.textContent = option.textContent;
+			optionsContainer.classList.remove('show');
+			const [filterKey] = customSelect.classList[1].split('-');
+			filterItems(filterKey, option.getAttribute('data-value'));
+			});
+		});
+		});
+
+		document.addEventListener('click', (event) => {
+		customSelects.forEach(customSelect => !customSelect.contains(event.target) && customSelect.querySelector('.options').classList.remove('show'));
+		});
+
+		function filterItems(filterKey, selectedValue) {
+		const itemCards = itemContainer.querySelectorAll('.item-card');
+
+		itemCards.forEach(itemCard => {
+			const lightColor = itemCard.querySelector('.light-color').textContent;
+			const hasDriedFlowers = itemCard.querySelector('.has-dried-flowers').textContent;
+			const price = parseFloat(itemCard.querySelector('.price').textContent.replace(/[^0-9.]/g, ''));
+
+			const matchLight = filterKey === 'light' && (selectedValue === 'all' || lightColor === selectedValue);
+			const matchDried = filterKey === 'dried' && (selectedValue === 'all' || (selectedValue === 'yes' && hasDriedFlowers === 'true') || (selectedValue === 'no' && hasDriedFlowers === 'false'));
+			const matchPrice = filterKey === 'price' && (selectedValue === 'all' || (selectedValue === '1' && price <= 500) || (selectedValue === '2' && price > 500 && price <= 1000) || (selectedValue === '3' && price > 1000));
+
+			itemCard.style.display = (matchLight || matchDried || matchPrice) ? 'block' : 'none';
+		});
+		}
+
 
 	</script>
 </html>
