--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                 items: 1,
 				mouseDrag: false,
 				touchDrag: false, 
-				// autoplay: true,
-                // autoplayTimeout: 5000,
-                // autoplaySpeed: 1000, 
+				autoplay: true,
+                autoplayTimeout: 5000,
+                autoplaySpeed: 1000, 
 				responsive: {
                     0: {
                         margin: -20,
