--- a/index.html
+++ b/index.html
@@ -95,33 +95,41 @@
 			</section>
 			<section class="second-block">
 				<img src="images/icons/element-4.svg" class="scndBlock-topELement">
-				<div class="container-xl">
-					<h2 class="block-title">Our Bestsellers</h2>
-					<div class="grid">
-						<a href="#" class="item-card">
-							<img src="images/cards/image-1.png" class="card-image">
-							<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
-							<p class="body-text-sm">with premium wrap and accents</p>
-							<p class="price">php 1,100.00</p>
-						</a>
-						<a href="#"class="item-card">
-							<img src="images/cards/image-2.png" class="card-image">
-							<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
-							<p class="body-text-sm">with premium wrap and accents</p>
-							<p class="price">php 850.00</p>
-						</a>
-						<a href="#" class="item-card">
-							<img src="images/cards/image-3.png" class="card-image">
-							<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
-							<p class="body-text-sm">with premium wrap and accents</p>
-							<p class="price">php 600.00</p>
-						</a>
-						<a href="#" class="item-card">
-							<img src="images/cards/image-4.png" class="card-image">
-							<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
-							<p class="body-text-sm">with wrap</p>
-							<p class="price">php 115.00</p>
-						</a>
+				<h2 class="block-title">Our Bestsellers</h2>
+				<div class="bestsellers slider-container">
+					<div class="bestsellers-slider owl-carousel">
+						<div class="item">
+							<div href="#" class="item-card">
+								<img src="images/cards/image-1.png" class="card-image">
+								<h3 class="card-title">3pcs Large Fossilized Dried Flower</h3>
+								<p class="body-text-sm">with premium wrap and accents</p>
+								<p class="price">php 1,100.00</p>
+							</div>
+						</div>
+						<div class="item">
+							<div href="#"class="item-card">
+								<img src="images/cards/image-2.png" class="card-image">
+								<h3 class="card-title">3pcs Medium Fossilized Dried Flower</h3>
+								<p class="body-text-sm">with premium wrap and accents</p>
+								<p class="price">php 850.00</p>
+							</div>
+						</div>
+						<div class="item">
+							<div href="#" class="item-card">
+								<img src="images/cards/image-3.png" class="card-image">
+								<h3 class="card-title">3pcs Small Fossilized Dried Flower</h3>
+								<p class="body-text-sm">with premium wrap and accents</p>
+								<p class="price">php 600.00</p>
+							</div>
+						</div>
+						<div class="item">
+							<div href="#" class="item-card">
+								<img src="images/cards/image-4.png" class="card-image">
+								<h3 class="card-title">7-8 inches long Mini dried bouquet</h3>
+								<p class="body-text-sm">with wrap</p>
+								<p class="price">php 115.00</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -131,7 +139,7 @@
 				<div class="container-xl">
 					<div class="filterContainer">
 						<div class="custom-select-container">
-							<p>Colors</p>
+							<p class="body-text-sm">Colors</p>
 							<div class="custom-select light-color-select">
 								<div class="selected-option">All</div>
 								<div class="options">
@@ -146,7 +154,7 @@
 							  </div>
 						</div>
 						<div class="custom-select-container">
-							<p>Flower Type</p>
+							<p class="body-text-sm">Flower Type</p>
 							<div class="custom-select dried-flower-select">
 								<div class="selected-option">All</div>
 								<div class="options">
@@ -157,7 +165,7 @@
 							</div>
 						</div>
 						<div class="custom-select-container">
-							<p>Price Range</p>
+							<p class="body-text-sm">Price Range</p>
 							<div class="custom-select price-range-select">
 								<div class="selected-option">All</div>
 								<div class="options">
@@ -250,7 +258,7 @@
 					<h2 class="block-title">Our Café</h2>
 					<p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 				</div>
-				<div class="slider-container">
+				<div class="cafe slider-container">
 					<div class="cafe-slider owl-carousel">
 						<div class="item"><img src="images/slider/slider_img_1.png" alt="Image 1"></div>
 						<div class="item"><img src="images/slider/slider_img_2.png" alt="Image 2"></div>
@@ -263,11 +271,42 @@
 					<div class="menu-container">
 						<img src="images/icons/menu-title.svg" class="menu-title">
 						<div class="grid">
-							<img src="images/menu-1.png" class="menu-img">
-							<img src="images/menu-2.png" class="menu-img">
+							<img src="images/menu-1.svg" class="menu-img">
+							<img src="images/menu-2.svg" class="menu-img">
 						</div>
 					</div>
 					
+				</div>
+			</section>
+			<section class="fifth-block">
+				<div class="container-xl">
+					<h2 class="block-title">What our customers say about us</h2>
+					<div class="grid">
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+						<div class="testi-card">
+							<p class="body-text">I really find this place! I'm happy that we got the chance to see and dine. Place is amazing and very relaxing! thank you Ms. Nyx for your great service! highly recommended this cafe with my friends and family</p>
+							<p class="body-text-sm">Cess</p>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
@@ -445,6 +484,36 @@
                     1200: {
                         margin: -75,
                     }
+                }
+            });
+
+			$('.bestsellers-slider').owlCarousel({
+                loop: true,
+                margin: 28,
+                nav: true,
+				dots: false,
+                items: 3,
+				// center: true,
+				mouseDrag: false,
+				touchDrag: false, 
+				onInitialized: function () {
+                    var maxHeight = 0;
+                    $('.bestsellers-slider .item').each(function(){
+                        maxHeight = Math.max(maxHeight, $(this).height());
+                    });
+                    $('.bestsellers-slider .item').css('height', maxHeight + 'px');
+                },
+				responsive: {
+                    0: {
+						margin: 10,
+						items: 1,
+                    },
+					700: {
+						margin: 10,
+                    },
+					1024: {
+						margin: 20,
+                    },
                 }
             });
         });
