--- a/index.html
+++ b/index.html
@@ -280,6 +280,26 @@
 			</section>
 			<section class="fifth-block">
 				<div class="container-xl">
+					<div class="social-media-container">
+						<h2 class="block-title">Connect to our Official Social Media Accounts</h2>
+						<div class="grid-social">
+							<div class="tiktok-con">
+								<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@hiddenloveflowercafe" data-unique-id="hiddenloveflowercafe" data-embed-type="creator" style="height: 490px; max-width: 100%; min-width: 100%;" > 
+									<section> <a target="_blank" href="https://www.tiktok.com/@hiddenloveflowercafe?refer=creator_embed">@hiddenloveflowercafe</a> </section> 
+								</blockquote> 
+								<script async src="https://www.tiktok.com/embed.js"></script>
+							</div>
+							<div class="facebook-con">
+								<div class="fb-page" data-href="https://www.facebook.com/hiddenloveflowercafe/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/hiddenloveflowercafe/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/hiddenloveflowercafe/">Hidden Love Flower Cafe</a></blockquote></div>
+							</div>
+							<div class="insta-con">
+								<blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/CxzRUqlPY0b/" style="max-width: 100%; min-width: 100%!important;">
+									<a href="https://www.instagram.com/p/CxzRUqlPY0b/">View this post on Instagram</a>
+								</blockquote>
+								
+							</div>
+						</div>
+					</div>
 					<h2 class="block-title">What our customers say about us</h2>
 					<div class="grid">
 						<div class="testi-card">
@@ -314,6 +334,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+	<div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="LOupvr4o"></script>
+	<script async src="//www.instagram.com/embed.js"></script>
 	<!-- <script src="js/navigation.js"></script>
 	<script src="js/slider.js"></script>
 	<script src="js/fadeViewpoint.js"></script> -->
